--- a/public/index.html
+++ b/public/index.html
@@ -6,8 +6,8 @@
 </head>
 <body>
 <div id="root"></div>
-<!-- script src="https://unpkg.com/react@15/dist/react.min.js"></script>
-<script src="https://unpkg.com/react-dom@15/dist/react-dom.min.js"></script-->
+<!-- script content="https://unpkg.com/react@15/dist/react.min.js"></script>
+<script content="https://unpkg.com/react-dom@15/dist/react-dom.min.js"></script-->
 <script src="https://unpkg.com/react@15/dist/react.js"></script>
 <script src="https://unpkg.com/react-dom@15/dist/react-dom.js"></script>
 <script src="Facets_.js"></script>
