--- a/src/calendar/calendar.html
+++ b/src/calendar/calendar.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Calendar - Flexbox</title>
-  <link rel="stylesheet" type="text/css" href="calendar.css">
+  <link rel="stylesheet" type="text/css" href="Calendar.css">
 </head>
 <body>
 <div class="container">
